--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,10 +3,13 @@
     <div class="flex justify-end">
       <div class="flex space-x-4">
         <div class="md:flex items-center space-x-1">
-          <a href=""
-            class="py-2 px-3 bg-yellow-400 hover:bg-yellow-300 text-yellow-900 hover:text-yellow-800 rounded transition duration-300">Register Now</a>
+          <button href="" (click)="openUserRegistrationDialog()"
+            class="py-2 px-3 bg-yellow-400 hover:bg-yellow-300 text-yellow-900 hover:text-yellow-800 rounded transition duration-300">Register Now</button>
         </div>
       </div>
     </div>
   </div>
 </nav>
+
+<app-user-register *ngIf="userRegistrationDialogVisibility"
+[userRegistrationDialogVisibility]="userRegistrationDialogVisibility"></app-user-register>
